# TestDrivenDevelopmentPythonPytest

KentBeckTDD/wycash/: .dockerignore  README.md  packages.dot  pyproject.toml
KentBeckTDD/wycash/multiCurrency/: __init__.py  __main__.py  currency.py  exceptions.py
KentBeckTDD/wycash/reports/codeTests/: index.html
KentBeckTDD/wycash/scripts/: codeFormat.py
KentBeckTDD/wycash/tests/unitTests/: __init__.py  readme.md  wycashTests.py
awsCdk/awsCdkProject/: .dockerignore  README.md  app.py  cdk.json  package-lock.json  package.json  pyproject.toml
awsCdk/awsCdkProject/awsInfrastructure/: __init__.py  stack.py
awsCdk/awsCdkProject/cdk.out/: AwsInfrastructureStack.assets.json  AwsInfrastructureStack.template.json  manifest.json  tree.json
awsCdk/awsCdkProject/cdk.out/asset.284f486bbb922bd8a3ed45ab6c620e308bea9f5cb4b0f1e1ab11e7a9f4a01c32/: pyproject.toml
awsCdk/awsCdkProject/cdk.out/asset.284f486bbb922bd8a3ed45ab6c620e308bea9f5cb4b0f1e1ab11e7a9f4a01c32/requestslambda/: lambdaModule.py
awsCdk/awsCdkProject/scripts/: codeFormat.py
chalicedemo/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  setup.cfg  setup.py
chalicedemo/.github/workflows/: publish-docker.yml  test.yml
chalicedemo/chalice/: app.py
chalicedemo/chalicedemo/: app.py
chalicedemo/chalicedemo/.chalice/: config.json
chalicedemo/chalicedemo/tests/: conftest.py
chalicedemo/tests/: conftest.py
checkout/: .coveragerc  .dockerignore  Dockerfile  Pipfile  README.md  setup.cfg  setup.py
checkout/.github/workflows/: publish-docker.yml  test.yml
checkout/checkout/: __init__.py  __main__.py
checkout/tests/unit_tests/: test_checkout.py
fib/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
fib/.github/workflows/: publish-docker.yml  test.yml
fib/fib/: __init__.py  __main__.py  fib.py
fib/pytest_profiles/2021_10_30_18_32_27/fibTest/: test.cprof
fib/pytest_profiles/2021_10_30_18_35_17/fibTest/: test.cprof
fib/reports/: profile.html
fib/reports/prof/: combined.prof  fibTest.prof
fib/tests/: conftest.py
fib/tests/unitTests/: fibTests.py
fib/tests/unit_tests/: test_fib.py
fibClosure/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
fibClosure/.github/workflows/: publish-docker.yml  test.yml
fibClosure/fibClosure/: __main__.py
fibClosure/tests/: conftest.py
fibClosure/tests/unitTests/: testFibClosure.py
filostack/: .coveragerc  .dockerignore  Dockerfile  README.md  setup.cfg  setup.py
filostack/.github/workflows/: publish-docker.yml  test.yml
filostack/filostack/: __init__.py  __main__.py
filostack/test/: test_filostack.py
fizzBuzz/: .dockerignore  README.md  pyproject.toml
fizzBuzz/fizzBuzz/: __init__.py  exceptions.py  fizzbuzz.py
fizzBuzz/scripts/: codeFormat.py
flask_serverless_test/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Pipfile  README.md  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py
flask_serverless_test/flasktest/: __main__.py  app.py
flask_serverless_test/tests/: conftest.py
fluidDynamics/: .dockerignore  README.md  pyproject.toml
fluidDynamics/fluidDynamics/: __init__.py  __main__.py
fluidDynamics/tests/unitTests/: fluidDynamicsTests.py
functoolsExamples/: pyproject.toml
functoolsExamples/functoolsexamples/: withFuncTools.py  withoutFuncTools.py
functoolsExamples/tests/: test_functoolsexamples.py
hypothesis/isnanHypothesis/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
hypothesis/isnanHypothesis/.github/workflows/: publish-docker.yml  test.yml
hypothesis/isnanHypothesis/isnanHypothesis/: __init__.py  __main__.py
hypothesis/isnanHypothesis/tests/unitTests/: isnanHypothesisTests.py
kflask/: Dockerfile  README.md  pyproject.toml
kflask/kflask/: __init__.py  __main__.py  exceptions.py
kflask/scripts/: codeFormat.py
knightsTour/: .dockerignore  README.md  pyproject.toml
knightsTour/knightsTour/: __init__.py  __main__.py  board.py  exceptions.py  game.py
knightsTour/scripts/: codeFormat.py
map_reduce_filter/: map.ipynb
pynamoMoto/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  setup.cfg  setup.py
pynamoMoto/pynamoMoto/: mypynamodb.py
pynamoMoto/tests/: conftest.py
pythonKata/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
pythonKata/.github/workflows/: publish-docker.yml  test.yml
pythonKata/pythonKata/: __init__.py  __main__.py  likeNames.py
pythonKata/tests/data/: data_likes.py
pythonKata/tests/unitTests/: fibTests.py  likeNamesTests.py
pythonProtocol/: .dockerignore  README.md  pyproject.toml
pythonProtocol/pythonProtocol/: __init__.py  __main__.py  exceptions.py  protocol.py
pythonProtocol/scripts/: codeFormat.py
python_monkey_patching/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  setup.cfg  setup.py
python_monkey_patching/python_monkey_patching/: __main__.py
singleton/: .coveragerc  .dockerignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
singleton/.github/workflows/: publish-docker.yml  test.yml
singleton/singleton/: __init__.py  __main__.py
singleton/tests/unitTests/: testsingleton.py
slotmachine/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  packages.dot  setup.cfg  setup.py
slotmachine/slotMachine/: __main__.py  device.py
stringOrderCheck/: .dockerignore  README.md  pylintrc  pyproject.toml
stringOrderCheck/reports/codeCov/: d_af0d8f0ff85ec109___init___py.html  d_af0d8f0ff85ec109_exceptions_py.html  d_af0d8f0ff85ec109_stringOrder_py.html  index.html  status.json
stringOrderCheck/reports/codetests/: index.html
stringOrderCheck/scripts/: codeFormat.py
stringOrderCheck/stringOrderCheck/: __init__.py  __main__.py  exceptions.py  stringOrder.py
stringOrderCheck/tests/unitTests/: stringOrderCheckTests.py
(+24 files in other folders)
