[tool.poetry]
name = "fluidDynamics"
version = "0.1.0"
description = ""
authors = ["unknown <unknown@unknown.com>"]
packages = [
    { include = "fluidDynamics" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = { version = "*" }
isort = { version = "*" }
mypy = { version = "*" }
pytest-aio = { version = "*" }
pytest-assume = { version = "*" }
pytest-asyncio = { version = "*" }
pytest-black = { version = "*" }
pytest-colordots = { version = "*" }
pytest-cov = { version = "*" }
pytest-datadir = { version = "*" }
pytest-depends = { version = "*" }
pytest-flake8 = { version = "*" }
pytest-html = { version = "*" }
pytest-metadata = { version = "*" }
pytest-mock = { version = "*" }
pytest-pylint = { version = "*" }
pytest-sugar = { version = "*" }
pytest-isort = { version = "*" }
pytest-mypy = { version = "*" }
pytest = { version = "*" }
pytest-xdist = { version = "*" }

[tool.pytest.ini_options]
python_classes = "*Test"
python_functions = "*Test"
python_files = "*Tests.py"
addopts = "-v"
testpaths = [
    "fluidDynamics",
    "tests",
    "scripts",
]
markers = [
    "unitTests: unit tests",
    "integrationTests: integration tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.cov.run]
source = ["fluidDynamics"]
omit = ["fluidDynamics/__main__.py"]

[tool.cov.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    'if self\.debug',
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    'if __name__ == .__main__.:',
]
