[tool.poetry]
name = "requestsLambda"
version = "0.1.0"
description = ""
authors = ["michael-c-hoffman <mihaelchoffman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
boto3 = "^1.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
